prodMetadata/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AIR_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIR_Overdue__c</fullName>
        <formula>IF ((AND ( AIR_Required__c = True,  AIR_Completed__c = False, StartDate +3 &lt; DATEVALUE(NOW()))), &quot;True&quot;, &quot;False&quot;)</formula>
        <label>AIR Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ally_Sponsorships__c</fullName>
        <label>Ally Sponsorships</label>
        <summarizedField>CampaignMember.Ally_Sponsor__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Champion_Sponsorships__c</fullName>
        <label>Champion Sponsorships</label>
        <summarizedField>CampaignMember.Champion_Sponsor__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter</label>
        <referenceTo>Chapter__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign_Link__c</fullName>
        <label>C&amp;P Connect Campaign Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign__c</fullName>
        <label>C&amp;P Connect Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Default_Selected_Item__c</fullName>
        <inlineHelpText>Default Selected Item testing feroz</inlineHelpText>
        <label>C&amp;P Connect Default Selected Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Form_Name__c</fullName>
        <label>C&amp;P Connect Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Last_Update__c</fullName>
        <label>C&amp;P Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Basis__c</fullName>
        <label>C&amp;P Lift Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Campaign__c</fullName>
        <label>C&amp;P Lift Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Landing_Page__c</fullName>
        <label>C&amp;P Lift Landing Page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Life_Span__c</fullName>
        <label>C&amp;P Lift Life Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Rate__c</fullName>
        <label>C&amp;P Lift Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Max__c</fullName>
        <label>C&amp;P Patron Rank Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Min__c</fullName>
        <label>C&amp;P Patron Rank Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum_Start_Amount__c</fullName>
        <label>C&amp;P Payment Maximum Start Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
        <label>C&amp;P Payment Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
        <label>C&amp;P Payment Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collateral distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Group_Type__c</fullName>
        <label>Contact Group Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Tracking_Code__c</fullName>
        <inlineHelpText>Only applies when the Campaign record is a Donate Page.  If this campaign doesn&apos;t represent a donation page, leave this field null.</inlineHelpText>
        <label>Default Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_TY_Message__c</fullName>
        <description>Gets added to the thank-you email for Donations in this campaign.</description>
        <inlineHelpText>Gets added to the thank-you email for Donations in this campaign (only works when the campaign is assigned at the time of donation).</inlineHelpText>
        <label>Donation Thank You Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Public_Details__c</fullName>
        <description>Public event details for display on COV and external sites</description>
        <inlineHelpText>Public event details for display on COV and external sites. For images use the &quot;Web Address&quot; tab rather than uploading an image here directly (the latter will not work).  If you need a place to host the image you can use the Amazon S3 server.</inlineHelpText>
        <label>Public Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Scale__c</fullName>
        <label>Event Scale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Size__c</fullName>
        <label>Expected Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (External POC)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Friend_Individual_Tickets__c</fullName>
        <label>Friend Individual Tickets</label>
        <summarizedField>CampaignMember.Friend_Individual__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fundraising_Campaign_Goal__c</fullName>
        <label>Fundraising Campaign Goal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWCC__Unconverted_Leads__c</fullName>
        <formula>NumberOfLeads - NumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Leads that have not been converted into contacts.</inlineHelpText>
        <label>Open Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hero_Sponsorships__c</fullName>
        <label>Hero Sponsorships</label>
        <summarizedField>CampaignMember.Hero_Sponsor__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IAVA_Partner_Event__c</fullName>
        <label>IAVA/Partner/Member Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IAVA Event</fullName>
                </value>
                <value>
                    <fullName>Partner Event</fullName>
                </value>
                <value>
                    <fullName>Non-IAVA Event</fullName>
                </value>
                <value>
                    <fullName>Member Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor__c</fullName>
        <label>Indoor/Outdoor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Event_Donate_Page__c</fullName>
        <description>Link to the page on the website that accepts payment or the form for people to sign up to attend.</description>
        <inlineHelpText>Link to the page on the website that accepts payment or the form for people to sign up to attend.</inlineHelpText>
        <label>Link to Event/Donate Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Source_Report__c</fullName>
        <inlineHelpText>If this campaign was populated by a report, please put a link to the report here.</inlineHelpText>
        <label>Link to Source Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the name of the local point of contact for this event.</description>
        <label>Local POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Address_Venue__c</fullName>
        <label>Location Address/Venue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>Location State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members_Recruited_from_Campaign__c</fullName>
        <label>Members Recruited from Campaign</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Attended__c</fullName>
        <description>Count of campaign members with status &quot;Attended&quot;</description>
        <inlineHelpText>Count of campaign members with status &quot;Attended&quot;</inlineHelpText>
        <label>Num. Attended</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Confirmed__c</fullName>
        <description>Count of campaign members with status &quot;Confirmed&quot;</description>
        <inlineHelpText>Count of campaign members with status &quot;Confirmed&quot;</inlineHelpText>
        <label>Num. Confirmed</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_on_one_conversations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-on-one conversations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Openness__c</fullName>
        <label>Openness</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Member-Only</fullName>
                </value>
                <value>
                    <fullName>Open Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_number_entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phone numbers were collected at this event</description>
        <inlineHelpText>Phone numbers were collected at this event</inlineHelpText>
        <label>Phone number entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Hero_Sponsorships__c</fullName>
        <label>Platinum Hero Sponsorships</label>
        <summarizedField>CampaignMember.Platinum_Hero__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Potential_Leaders_Identified__c</fullName>
        <label>Potential Leaders Identified</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_RRRP_Clients_Identified__c</fullName>
        <label>Potential RRRP Clients Identified</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predictive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Predictive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There was an IAVA presentation or training at this event</description>
        <inlineHelpText>There was an IAVA presentation or training at this event</inlineHelpText>
        <label>Presentation / training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Inside_COV_To__c</fullName>
        <description>&quot;Everyone&quot; means show the announcement to everyone. After the user dismisses the announcement they are added to the campaign.  &quot;Campaign Members&quot; means only show to those people, and when they dismiss change the campaign status accordingly.</description>
        <inlineHelpText>&quot;Everyone&quot; means show the announcement to everyone. After the user dismisses the announcement they are added to the campaign.  &quot;Campaign Members&quot; means only show to those people, and when they dismiss change the campaign status accordingly.</inlineHelpText>
        <label>Show Inside COV To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Everyone</fullName>
                </value>
                <value>
                    <fullName>Campaign Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_Inside_COV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows in COV 2.0 (only for types: Event, COV Announcement, Petition)</description>
        <inlineHelpText>Shows in COV 2.0 (only for types: Event, COV Announcement, Petition)</inlineHelpText>
        <label>Show Inside COV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy/Lobbying Event</fullName>
                </value>
                <value>
                    <fullName>Art Event</fullName>
                </value>
                <value>
                    <fullName>Ceremonial Event</fullName>
                </value>
                <value>
                    <fullName>Concert</fullName>
                </value>
                <value>
                    <fullName>Demob</fullName>
                </value>
                <value>
                    <fullName>Donor VIP Event</fullName>
                </value>
                <value>
                    <fullName>Fundraising Event</fullName>
                </value>
                <value>
                    <fullName>Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Membership Drive</fullName>
                </value>
                <value>
                    <fullName>Membership Meeting</fullName>
                </value>
                <value>
                    <fullName>Members repping IAVA event</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Press Conference</fullName>
                </value>
                <value>
                    <fullName>Resource Fair</fullName>
                </value>
                <value>
                    <fullName>Sporting Event</fullName>
                </value>
                <value>
                    <fullName>Vets Day</fullName>
                </value>
                <value>
                    <fullName>VSO Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporter_Individual_Tickets__c</fullName>
        <label>Supporter Individual Tickets</label>
        <summarizedField>CampaignMember.Supporter_Individual__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tabling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tabling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field allows this campaign to be used as a template campaign when creating a new campaign.</description>
        <inlineHelpText>Check this field to allow this campaign to be used as a template when creating a new campaign.</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Campaign_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>Name</defaultValue>
        <label>Unique Campaign Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valor_Sponsorships__c</fullName>
        <label>Valor Sponsorships</label>
        <summarizedField>CampaignMember.Valor_Sponsor__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Batch_Status_Indicator__c</fullName>
        <formula>IF( ISBLANK(WE_FW8_NP__Number_of_Records_Processed__c), &quot;0&quot;,  TEXT(WE_FW8_NP__Number_of_Records_Processed__c)) &amp; &quot; of &quot; &amp; TEXT(WE_FW8_NP__Total_Records_Count__c) &amp; &quot; records sent to WealthEngine&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WE Batch Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Is_Error_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error on Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Number_of_Records_Processed__c</fullName>
        <label>Number of Records Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Total_Records_Count__c</fullName>
        <label>Total Records Count</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WE_FW8_NP__Wealth_Engine_Batch_Status__c</fullName>
        <label>WE Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Batch In Progress</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Campaign_Engagement_Level_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT( percET__Campaign_Engagement_Level__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Engagement Level as Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Campaign_Engagement_Level__c</fullName>
        <inlineHelpText>Engagement level that should be earned by someone participating in this campaign.</inlineHelpText>
        <label>Campaign Engagement Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Community</fullName>
                    <color>#FFFF66</color>
                </value>
                <value>
                    <fullName>2 - Participating</fullName>
                    <color>#FFCC66</color>
                </value>
                <value>
                    <fullName>3 - Endorsing</fullName>
                    <color>#FF9900</color>
                </value>
                <value>
                    <fullName>4 - Contributing</fullName>
                    <color>#FF6600</color>
                </value>
                <value>
                    <fullName>5 - Promoting</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>6 - Owning</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>7 - Leading</fullName>
                    <color>#660000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percET__Levels_Below_Top_of_Hierarchy__c</fullName>
        <formula>/*IF ( Parent.Parent.Parent.Parent.Id != null , 4 ,
IF (Parent.Parent.Parent.Id != null, 3,
IF (Parent.Parent.Id != null, 2,
IF (Parent.Id != null, 1 , 0)
)))
*/

null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For internal use by StepUp.  Should be hidden from end users.</inlineHelpText>
        <label>DEPRECATED Levels Below Top of Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Steps_Below_Hierarchy_Top__c</fullName>
        <inlineHelpText>How many steps below top of hierarchy is this campaign?  For campaigns with no Parent, this will be 0.  Maintained automatically by StepUp.</inlineHelpText>
        <label>Steps Below Hierarchy Top</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Top_Hierarchy_Campaign_ID__c</fullName>
        <description>This field uses up four of the 10 available slots for cross-object references in Campaign.  But is integral to the batch class for calculating campaign-based metrics.</description>
        <formula>/*IF ( Parent.Parent.Parent.Parent.Id != null , Parent.Parent.Parent.Parent.Id ,
  IF (Parent.Parent.Parent.Id != null, Parent.Parent.Parent.Id, 
    IF (Parent.Parent.Id  != null, Parent.Parent.Id ,
       IF (Parent.Id  != null, Parent.Id , Id )
)))*/

null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For internal use by StepUp.  Should be hidden from end users.</inlineHelpText>
        <label>DEPRECATED Top of Hierarchy Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>percET__Top_of_Hierarchy_Campaign_ID__c</fullName>
        <label>Top of Hierarchy Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>percET__Total_Engagement_Jumpers__c</fullName>
        <description>set by campaign batch process</description>
        <inlineHelpText>How many people moved up at least one engagement level due to participation in this campaign?  Calculated automatically by StepUp.</inlineHelpText>
        <label>Total Engagement Jumpers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Total_Engagement_Jumpers_in_Hierarchy__c</fullName>
        <description>set by campaign batch process</description>
        <inlineHelpText>Number of contacts that moved up at least engagement level due to participation in this campaign or one of its sub-campaigns.</inlineHelpText>
        <label>Total Engagement Jumpers in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Total_New_Supporters__c</fullName>
        <inlineHelpText>Count of how many contacts got their very first engagement level (above 0) because of participation in this campaign.</inlineHelpText>
        <label>Total New Supporters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Total_New_Supporters_in_Hierarchy__c</fullName>
        <inlineHelpText>Number of contacts that got their very first engagement level (above 0) due to participation in this campaign or one of its sub-campaigns.</inlineHelpText>
        <label>Total New Supporters in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Total_Unique_Contacts_In_Hierarchy__c</fullName>
        <inlineHelpText>An unduplicated count of contacts in this campaign and all sub-campaigns.  Note that the Salesforce &quot;Total Contacts in Hierarchy&quot; field is not unduplicated.  Provided by StepUp.</inlineHelpText>
        <label>Total Unique Contacts In Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percET__Total_Unique_Leads_in_Hierarchy__c</fullName>
        <inlineHelpText>An unduplicated count of leads in this campaign and all sub-campaigns.  Note that the Salesforce &quot;Total Leads in Hierarchy&quot; field is not unduplicated.  Provided by StepUp.</inlineHelpText>
        <label>Total Unique Leads in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>